# lab4

./: .gitignore  CMakeLists.txt  readme.md
cli/: interface.h
include/LazySequence/: Cardinal.h  Generators.h  IGenerator.h  LazySequence.h  TuringMachine.h
include/Specialized/: BitSequence.h  Deque.h  Queue.h  Stack.h  Vector.h
include/Stream/: BufferReadOnlyStream.h  FilteredGenerator.h  RWStreams.h  ReadOnlyStream.h  WriteOnlyStream.h
include/Stream/Specialized/: FileReadOnlyStream.h  IndexBuilder.h  SequenceReadOnlyStream.h
src/: main.cpp
tests/: test_deque.cpp  test_lazy_sequence.cpp  test_queue.cpp  test_sequence.cpp  test_stack.cpp  test_streams.cpp  test_turing_machine.cpp  test_vector.cpp
